# water-potability-ml-service

./: README.md  pyproject.toml
Infra/: .env.example  .gitignore  Dockerfile.mlflow  Example.ipynb  Makefile  README.md  data.dvc  docker-compose.yaml  prebucket.sh  pyproject.toml  requirements.txt  start.sh
Infra/mlflow.fauzanghaza.com/152430416136368919/45e675833382444d821ddd7dd36ec0bd/artifacts/model/: conda.yaml  model.pkl
Infra/mlflow.fauzanghaza.com/152430416136368919/45e675833382444d821ddd7dd36ec0bd/tags/: mlflow.log-model.history  mlflow.runName
Infra/mlflow.fauzanghaza.com/152430416136368919/4b3c60c7a9a44c16a1a4fef264e8b715/: meta.yaml
Infra/mlflow.fauzanghaza.com/152430416136368919/4b3c60c7a9a44c16a1a4fef264e8b715/artifacts/model/: MLmodel
Infra/mlflow.fauzanghaza.com/152430416136368919/4b3c60c7a9a44c16a1a4fef264e8b715/tags/: mlflow.log-model.history
Infra/mlflow.fauzanghaza.com/152430416136368919/9b07d0e3200b455490f5e9c5393f9ded/artifacts/model/: MLmodel
Infra/mlflow.fauzanghaza.com/152430416136368919/9b07d0e3200b455490f5e9c5393f9ded/tags/: mlflow.log-model.history
Infra/mlflow.fauzanghaza.com/152430416136368919/e63413b30624400dbe4349405970537b/: meta.yaml
Infra/mlflow.fauzanghaza.com/152430416136368919/e63413b30624400dbe4349405970537b/metrics/: accuracy
Infra/mlruns/0/: meta.yaml
Infra/notebooks/: Example.ipynb  requirements.txt
Infra/notebooks/mlruns/0/: meta.yaml
Infra/notebooks/mlruns/0/76f1ed2c032c4166aaf5c7d37649b014/: meta.yaml
Infra/notebooks/mlruns/0/76f1ed2c032c4166aaf5c7d37649b014/tags/: mlflow.runName  mlflow.source.name
(+38 files in other folders)
