[project]
name = "infra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.32",
    "grpcio>=1.75.0",
    "grpcio-tools>=1.75.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mlflow>=2.0.0,<3.0.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]
